Fix button transform spacing

--- a/src/pages/Reservations/ReservationAuditory/ReservationAuditory.module.css
+++ b/src/pages/Reservations/ReservationAuditory/ReservationAuditory.module.css
@@ -74,7 +74,6 @@
   display: block;
   border: none;
   transition: 500ms linear;
-  transform: translateY(-690px);
 }
 
 .box button:hover {
