--- a/src/pages/Reservations/ReservationMeetingRoom/ReservationMeetingRoom.module.css
+++ b/src/pages/Reservations/ReservationMeetingRoom/ReservationMeetingRoom.module.css
@@ -74,7 +74,6 @@
   display: block;
   border: none;
   transition: 500ms linear;
-  transform: translateY(-670px);
 }
 
 .box button:hover {
